--- a/Uncertainties.ipynb
+++ b/Uncertainties.ipynb
@@ -417,12 +417,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
-        "id": "HhjdG-K3s0Kx"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HhjdG-K3s0Kx",
+        "outputId": "935b9b14-a316-4535-fd2e-647aba736545"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The difference between Jack and Jill is: 0.05+/-0.04\n"
+          ]
+        }
+      ],
+      "source": [
+        "ri_jack = uc.ufloat(1.33, 0.03)\n",
+        "ri_jill = uc.ufloat(1.28, 0.02)\n",
+        "\n",
+        "print('The difference between Jack and Jill is:', ri_jack - ri_jill)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -440,20 +457,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "qH_WJW-Is0Kx",
-        "outputId": "ea671cc9-a322-4a66-ee4d-baba79170557"
+        "outputId": "994652dc-e466-49f7-dddd-dcc594170b70"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2.0\n"
+            "The natural frequency is: 23.61+/-0.10 Hz\n"
           ]
         }
       ],
@@ -461,7 +478,13 @@
         "fres = uc.ufloat(23.2, 0.1)\n",
         "a = uc.ufloat(19.5, 0.5)\n",
         "\n",
-        "fo = ()**(1/2)\n",
+        "Wres = 2*np.pi*fres\n",
+        "\n",
+        "W0 = (Wres**2 + 2*a**2)**(1/2)\n",
+        "\n",
+        "f0 = W0/(2*np.pi)\n",
+        "\n",
+        "print('The natural frequency is:', f0, 'Hz')\n",
         "\n"
       ]
     },
@@ -482,12 +505,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
-        "id": "9qM8BxBms0Kx"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9qM8BxBms0Kx",
+        "outputId": "89ce93ac-3c06-4b28-85fc-24b6f6660c4f"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "For (nx, ny, nz) = (1, 1, 1), the resonant frequency f is: 38.2+/-1.7 Hz\n",
+            "For (nx, ny, nz) = (1, 1, 2), the resonant frequency f is: 41.1+/-1.6 Hz\n",
+            "For (nx, ny, nz) = (2, 1, 1), the resonant frequency f is: 48.2+/-1.4 Hz\n"
+          ]
+        }
+      ],
+      "source": [
+        "L_x = uc.ufloat(10.2, 0.2)\n",
+        "L_y = uc.ufloat(5.2, 0.3)\n",
+        "L_z = uc.ufloat(20.0, 0.1)\n",
+        "T = uc.ufloat(23, 1)\n",
+        "c = 331.3 + T * 0.606\n",
+        "\n",
+        "n_values = [(1, 1, 1), (1, 1, 2), (2, 1, 1)]\n",
+        "\n",
+        "\n",
+        "for nx, ny, nz in n_values:\n",
+        "    f = (c / 2) * um.sqrt((nx**2 / L_x**2) + (ny**2 / L_y**2) + (nz**2 / L_z**2))\n",
+        "\n",
+        "    print(f'For (nx, ny, nz) = ({nx}, {ny}, {nz}), the resonant frequency f is: {f} Hz')"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -505,12 +556,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
-        "id": "gDwdP3mJs0Kx"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gDwdP3mJs0Kx",
+        "outputId": "6553999c-e7eb-4c7e-d4a0-9ccc17288756"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The reflection coefficient is: 0.0650677\n"
+          ]
+        }
+      ],
+      "source": [
+        "Theta_i = uc.ufloat(78, 1)\n",
+        "Theta_t = uc.ufloat(40, 1)\n",
+        "\n",
+        "R_parallel = (um.tan(Theta_i - Theta_t)**2)/(um.tan(Theta_i + Theta_t)**2)\n",
+        "\n",
+        "print(f'The reflection coefficient is: {R_parallel.std_dev:2g}')"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -542,12 +612,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
-        "id": "qGEyS2gHs0Kx"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qGEyS2gHs0Kx",
+        "outputId": "b9eb69d1-abb4-460c-f6b1-9d9fb0928d9f"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The fractional uncertainty of the fluid flow discharge coefficient is: 2e+01 %\n"
+          ]
+        }
+      ],
+      "source": [
+        "m = uc.ufloat(0.13, 0.01)\n",
+        "d = uc.ufloat(11e-3, 1e-3)\n",
+        "D = uc.ufloat(71e-3, 1e-3)\n",
+        "rho = uc.ufloat(1.01e3, 0.01e3)\n",
+        "DeltaP = uc.ufloat(156, 7)\n",
+        "K = 1\n",
+        "F = 1\n",
+        "\n",
+        "Cd = (m * um.sqrt(1 - (d/D)**4)) / (K * d**2 * F * um.sqrt(rho * DeltaP))\n",
+        "\n",
+        "fractional_uncertainty = (Cd.std_dev / Cd.nominal_value) * 100\n",
+        "\n",
+        "print(f'The fractional uncertainty of the fluid flow discharge coefficient is: {fractional_uncertainty:.1g} %')"
+      ]
     },
     {
       "cell_type": "markdown",
